Fix ShowGrid cover images misaligning on Safari

--- a/src/css/components/ShowsGrid.css
+++ b/src/css/components/ShowsGrid.css
@@ -52,6 +52,7 @@
     height: 100%;
     position: absolute;
     top: 0;
+    left: 0;
   }
 
   &__description {
